argocd-contour/test/httpbin/02-generate-certificate.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: httpbin-wide-self
  namespace: default
spec:
  secretName: httpbin-wide-tls
  issuerRef:
    kind: ClusterIssuer
    name: selfsigned-issuer
  dnsNames:
  - '*.sanniolo.myinstance.com'
  - sanniolo.myinstance.com
  #- httpbin.sanniolo.myinstance.com
