argocd-contour/test/httpbin/04-ingress-self-signed.yaml
# httpproxy-tls.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: httpbin
spec:
  virtualhost:
    fqdn: httpbin.sanniolo.myinstance.com
    tls:
      secretName: httpbin-wide-tls
  routes:
    - services:
        - name: httpbin
          port: 80
